--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,9 @@ services:
       - PING_IDENTITY_DEVOPS_USER=$PING_IDENTITY_DEVOPS_USER
       - PING_IDENTITY_DEVOPS_KEY=$PING_IDENTITY_DEVOPS_KEY
       - PF_LOG_LEVEL=INFO
-      - PF_SYSLOG_DEST=logstash
-      - PF_SYSLOG_PORT=20514
-      - PF_SYSLOG_PROTO=TCP
+      - syslog.host=logstash
+      - syslog.port=20514
+      - syslog.protocol=TCP
     ports:
       - 9031:9031
       - 9999:9999
