--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -17,7 +17,7 @@ output{
     hosts => ["https://es01:9200","https://es02:9200"]
     index => "logs"
     user => "elastic"
-    password => "FederateM0re"
+    password => "2FederateM0re"
   }
 }
 
