--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -1,12 +1,17 @@
 input {
+  #Syslog Listener for Ping Federate Audit Logs
   syslog {
     port => 20514
     type => syslog
+    add_field =>  [ "log_type", "PingFed_Security_Audit" ] 
   }
 }
 
 filter{
-
+    csv{
+      columns => ["long_log_timestamp","event_time","trackingid","event_name","subject","ip","app","connectionid","protocol","host_name","role","status","adapterid","description","responsetime"]
+      separator => "| "
+    }
 }
 
 output{
