added provisioner logs, new syslog port

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -1,28 +1,55 @@
 input {
-  #Syslog Listener for Ping Federate Audit Logs
-  syslog {
-    port => 20514
-    type => syslog
-  }
+    syslog {
+        id => "audit_in"
+        port => 20514
+        type => syslog
+        add_field => {"log_type" => "PF_Audit_Log"}
+    }
+    syslog {
+        id => "provisioner_in"
+        port => 20515
+        type => syslog
+        add_field => {"log_type" => "PF_Provisioner_Log"}
+    }
 }
 
 filter{
-    csv{
-      columns => ["long_log_timestamp","event_time","trackingid","event_name","subject","ip","app","connectionid","protocol","host_name","role","status","adapterid","description","responsetime"]
-      separator => "| "
-    add_field =>  [ "log_type", "PingFed_Security_Audit" ]
+    #Log4J Pattern
+    #<pattern>| %d{MMM dd yyyy HH:mm:ss.SSS}| PingIdentity| PingFederate| AuditLog | %X{trackingid}| %X{event}| %X{subject}| %X{ip} | %X{app}| %X{connectionid}| %X{protocol}| %X{host}| %X{role}| %X{status}| %X{adapterid}| %X{description}| %X{responsetime} %n</pattern>
+    if([log_type] == "PF_Audit_Log"){
+        csv{
+            columns => ["long_log_timestamp","event_time","company_name","product_name","log_type_stamp","trackingid","event_name","subject","ip","app","connectionid","protocol","host_name","role","status","adapterid","description","responsetime"]
+            separator => "| "
+        }
+    }
+
+    #Log4J Pattern
+    #<pattern>| %d{MMM dd yyyy HH:mm:ss.SSS}| PingIdentity| PingFederate| ProvisionerLog| %X{pfversion}| %X{event_type}| %X{cycle_id}| %X{channel_id}| %X{event_type}| %X{source_id}| %X{target_id}| %X{is_success}| %X{non_success_cause} %n</pattern>
+    if([log_type] == "PF_Provisioner_Log"){
+        csv{
+            columns => ["long_log_timestamp","event_time","company_name","product_name","log_type_stamp","pfversion","event_type","cycle_id","channel_id","event_type","source_id","target_id","is_success","non_success_cause"]
+            separator => "| "
+        }
     }
 }
 
 output{
-  elasticsearch {
-    id => "log-dump"
-    ssl => true
-    ssl_certificate_verification => false
-    hosts => ["https://es01:9200","https://es02:9200"]
-    index => "logs"
-    user => "elastic"
-    password => "2FederateM0re"
-  }
+    elasticsearch {
+        id => "audit_out"
+        ssl => true
+        ssl_certificate_verification => false
+        hosts => ["https://es01:9200","https://es02:9200"]
+        index => "pf-audit-logs-%{+YYYY.MM.dd}"
+        user => "elastic"
+        password => "2FederateM0re"
+    }
+    elasticsearch {
+        id => "provisioner_out"
+        ssl => true
+        ssl_certificate_verification => false
+        hosts => ["https://es01:9200","https://es02:9200"]
+        index => "pf-provisioner-logs-%{+YYYY.MM.dd}"
+        user => "elastic"
+        password => "2FederateM0re"
+    }
 }
-
