--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,8 @@ services:
       - PING_IDENTITY_DEVOPS_KEY=$PING_IDENTITY_DEVOPS_KEY
       - PF_LOG_LEVEL=INFO
       - SYSLOG_HOST=logstash
-      - SYSLOG_PORT=20514
+      - SYSLOG_PORT_AUDIT=20514
+      - SYSLOG_PORT_PROVISIONER=20515
       - SYSLOG_PROTOCOL=TCP
     ports:
       - 9031:9031
