--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -18,7 +18,7 @@ filter{
     #<pattern>| %d{MMM dd yyyy HH:mm:ss.SSS}| PingIdentity| PingFederate| AuditLog | %X{trackingid}| %X{event}| %X{subject}| %X{ip} | %X{app}| %X{connectionid}| %X{protocol}| %X{host}| %X{role}| %X{status}| %X{adapterid}| %X{description}| %X{responsetime} %n</pattern>
     if([log_type] == "PF_Audit_Log"){
         csv{
-            columns => ["long_log_timestamp","event_time","company_name","product_name","log_type_stamp","trackingid","event_name","subject","ip","app","connectionid","protocol","host_name","role","status","adapterid","description","responsetime"]
+            columns => ["long_log_timestamp","event_time","company_name","product_name","log_type_stamp","trackingid","event_name","subject","ip","app","connectionid","protocol","host_name","role","status","adapterid","description","responsetime","initiator"]
             separator => "| "
         }
     }
@@ -34,22 +34,26 @@ filter{
 }
 
 output{
-    elasticsearch {
-        id => "audit_out"
-        ssl => true
-        ssl_certificate_verification => false
-        hosts => ["https://es01:9200","https://es02:9200"]
-        index => "pf-audit-logs-%{+YYYY.MM.dd}"
-        user => "elastic"
-        password => "2FederateM0re"
+    if([log_type] == "PF_Audit_Log"){
+        elasticsearch {
+            id => "audit_out"
+            ssl => true
+            ssl_certificate_verification => false
+            hosts => ["https://es01:9200","https://es02:9200"]
+            index => "pf-audit-logs-%{+YYYY.MM.dd}"
+            user => "elastic"
+            password => "2FederateM0re"
+        }
     }
-    elasticsearch {
-        id => "provisioner_out"
-        ssl => true
-        ssl_certificate_verification => false
-        hosts => ["https://es01:9200","https://es02:9200"]
-        index => "pf-provisioner-logs-%{+YYYY.MM.dd}"
-        user => "elastic"
-        password => "2FederateM0re"
+    if([log_type] == "PF_Provisioner_Log"){
+        elasticsearch {
+            id => "provisioner_out"
+            ssl => true
+            ssl_certificate_verification => false
+            hosts => ["https://es01:9200","https://es02:9200"]
+            index => "pf-provisioner-logs-%{+YYYY.MM.dd}"
+            user => "elastic"
+            password => "2FederateM0re"
+        }
     }
 }
