--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -21,6 +21,14 @@ filter{
             columns => ["long_log_timestamp","event_time","company_name","product_name","trackingid","event_name","subject","ip","app","connectionid","protocol","host_name","role","status","adapterid","description","responsetime","initiator"]
             separator => "| "
         }
+        mutate {
+            remove_field => "[tags]"
+            remove_field => "[message]"
+            remove_field => "[long_log_timestamp]"
+        }
+        geoip {
+            source => "ip"
+        }
     }
 
     #Log4J Pattern
