New threat Intel integration.

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -29,6 +29,25 @@ filter{
         geoip {
             source => "ip"
         }
+
+
+        translate {
+            field => "ip"
+            destination => "threat_intel"
+            fallback => "No"
+            dictionary_path => '/etc/logstash/enrichment/AlienVaultIP.yml'
+            refresh_behaviour => "replace"
+        }
+
+        translate {
+            field => "ip"
+            destination => "tor_intel"
+            fallback => "No"
+            dictionary_path => '/etc/logstash/enrichment/TorNodes.yml'
+            refresh_behaviour => "replace"
+        }
+
+
     }
 
     #Log4J Pattern
