--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,7 +43,7 @@ services:
       - pingnet
 
   es01:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:$ELASTIC_VERSION
     container_name: es01
     environment:
       - node.name=es01
@@ -79,7 +79,7 @@ services:
       - pingnet
 
   es02:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:$ELASTIC_VERSION
     container_name: es02
     environment:
       - node.name=es02
@@ -125,6 +125,7 @@ services:
         fi;
         chown -R 1000:0 /certs
 
+        sh /usr/share/elasticsearch/config/bootstrap/dep_install.sh
         sh /usr/share/elasticsearch/config/bootstrap/es_configurationloader.sh
       '
     user: "0"
@@ -136,11 +137,12 @@ services:
       - ./elasticsearch-siem/elasticsearch_config:/usr/share/elasticsearch/config/es_config
       - ./elasticsearch-siem/kibana_config:/usr/share/elasticsearch/config/kibana_config
       - ./elasticsearch-siem/ping_siem_config_bootstrap:/usr/share/elasticsearch/config/bootstrap
+      - ./elasticsearch-siem/enrichment_cache:/usr/share/elasticsearch/enrichment
     networks:
       - pingnet
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:7.6.0
+    image: docker.elastic.co/logstash/logstash:$ELASTIC_VERSION
     ports:
       - "9600:9600"
       - "20514:20514"
@@ -148,7 +150,8 @@ services:
     command: logstash -f /etc/logstash/conf.d/logstash.conf
     volumes:
       - ./elasticsearch-siem/logstash/conf.d:/etc/logstash/conf.d/logstash.conf
-      - certs:$CERTS_DIR    
+      - certs:$CERTS_DIR
+      - ./elasticsearch-siem/enrichment_cache:/etc/logstash/enrichment
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
       CONFIG_RELOAD_AUTOMATIC: "true"
@@ -166,7 +169,7 @@ services:
       - pingnet
 
   kibana:
-    image: 'docker.elastic.co/kibana/kibana:7.6.0'
+    image: docker.elastic.co/kibana/kibana:$ELASTIC_VERSION
     container_name: kibana
     environment:
       ELASTICSEARCH_USERNAME: "elastic"
