--- a/elasticsearch-siem/enrichment_cache/TorNodes.yml
+++ b/elasticsearch-siem/enrichment_cache/TorNodes.yml
@@ -126,6 +126,7 @@
 "142.44.156.144": "YES"
 "69.4.82.204": "YES"
 "103.75.190.11": "YES"
+"90.224.11.107": "YES"
 "178.175.148.25": "YES"
 "128.199.213.157": "YES"
 "199.249.230.85": "YES"
@@ -324,6 +325,8 @@
 "54.36.108.162": "YES"
 "107.189.10.143": "YES"
 "185.220.102.6": "YES"
+"77.247.181.162": "YES"
+"104.244.78.231": "YES"
 "71.19.144.106": "YES"
 "185.220.100.245": "YES"
 "185.220.101.34": "YES"
@@ -916,6 +919,7 @@
 "192.160.102.165": "YES"
 "79.137.79.167": "YES"
 "23.129.64.190": "YES"
+"87.118.96.154": "YES"
 "195.254.135.76": "YES"
 "185.220.101.22": "YES"
 "178.175.148.35": "YES"
