--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -66,7 +66,7 @@ output{
             hosts => ["https://es01:9200","https://es02:9200"]
             index => "pf-audit-logs-%{+YYYY.MM.dd}"
             user => "elastic"
-            password => "2FederateM0re"
+            password => "${ELASTIC_PASSWORD}"
         }
     }
     if([log_type] == "PF_Provisioner_Log"){
@@ -77,7 +77,7 @@ output{
             hosts => ["https://es01:9200","https://es02:9200"]
             index => "pf-provisioner-logs-%{+YYYY.MM.dd}"
             user => "elastic"
-            password => "2FederateM0re"
+            password => "${ELASTIC_PASSWORD}"
         }
     }
 }
