more image / compose changes

--- a/elasticsearch-siem/enrichment_cache/TorNodes.yml
+++ b/elasticsearch-siem/enrichment_cache/TorNodes.yml
@@ -805,6 +805,7 @@
 "185.38.175.71": "YES"
 "142.44.139.12": "YES"
 "109.70.100.20": "YES"
+"176.105.255.28": "YES"
 "23.129.64.230": "YES"
 "162.247.72.199": "YES"
 "180.150.226.99": "YES"
