pd testing log push

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -11,6 +11,12 @@ input {
         type => syslog
         add_field => {"log_type" => "PF_Provisioner_Log"}
     }
+    syslog {
+        id => "directory_in"
+        port => 20516
+        type => syslog
+        add_field => {"log_type" => "PD_Access_Log"}
+    }
 }
 
 filter{
@@ -70,6 +76,17 @@ output{
         }
     }
     if([log_type] == "PF_Provisioner_Log"){
+        elasticsearch {
+            id => "provisioner_out"
+            ssl => true
+            ssl_certificate_verification => false
+            hosts => ["https://es01:9200","https://es02:9200"]
+            index => "pf-provisioner-logs-%{+YYYY.MM.dd}"
+            user => "elastic"
+            password => "${ELASTIC_PASSWORD}"
+        }
+    }
+    if([log_type] == "PD_Access_Log"){
         elasticsearch {
             id => "provisioner_out"
             ssl => true
