--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -88,11 +88,11 @@ output{
     }
     if([log_type] == "PD_Access_Log"){
         elasticsearch {
-            id => "provisioner_out"
+            id => "pd_out"
             ssl => true
             ssl_certificate_verification => false
             hosts => ["https://es01:9200","https://es02:9200"]
-            index => "pf-provisioner-logs-%{+YYYY.MM.dd}"
+            index => "pd-access-logs-%{+YYYY.MM.dd}"
             user => "elastic"
             password => "${ELASTIC_PASSWORD}"
         }
