--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -21,7 +21,6 @@ input {
 
 filter{
     #Log4J Pattern
-    #<pattern>| %d{MMM dd yyyy HH:mm:ss.SSS}| PingIdentity| PingFederate| AuditLog | %X{trackingid}| %X{event}| %X{subject}| %X{ip} | %X{app}| %X{connectionid}| %X{protocol}| %X{host}| %X{role}| %X{status}| %X{adapterid}| %X{description}| %X{responsetime} %n</pattern>
     if([log_type] == "PF_Audit_Log"){
         csv{
             columns => ["long_log_timestamp","event_time","company_name","product_name","trackingid","event_name","subject","ip","app","connectionid","protocol","host_name","role","status","adapterid","description","responsetime","initiator"]
@@ -54,11 +53,31 @@ filter{
     }
 
     #Log4J Pattern
-    #<pattern>| %d{MMM dd yyyy HH:mm:ss.SSS}| PingIdentity| PingFederate| ProvisionerLog| %X{pfversion}| %X{event_type}| %X{cycle_id}| %X{channel_id}| %X{event_type}| %X{source_id}| %X{target_id}| %X{is_success}| %X{non_success_cause} %n</pattern>
     if([log_type] == "PF_Provisioner_Log"){
         csv{
             columns => ["long_log_timestamp","event_time","company_name","product_name","log_type_stamp","pfversion","event_type","cycle_id","channel_id","event_type","source_id","target_id","is_success","non_success_cause"]
             separator => "| "
+        }
+    }
+
+    if([log_type] == "PD_Access_Log"){
+
+        kv {
+            source => "[message]"
+            value_split => "="
+        }
+
+        grok {
+            match => { "message" => "\%{WORD:ldapType} %{GREEDYDATA}"}
+        }
+
+        mutate{
+            gsub => [ 
+                "filter", '"', ""
+            ]
+            gsub => [ 
+                "dn", '"', ""
+            ]
         }
     }
 }
