--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -79,6 +79,22 @@ filter{
                 "dn", '"', ""
             ]
         }
+
+        translate {
+            field => "requesterIP"
+            destination => "threat_intel"
+            fallback => "No"
+            dictionary_path => '/etc/logstash/enrichment/AlienVaultIP.yml'
+            refresh_behaviour => "replace"
+        }
+
+        translate {
+            field => "requesterIP"
+            destination => "tor_intel"
+            fallback => "No"
+            dictionary_path => '/etc/logstash/enrichment/TorNodes.yml'
+            refresh_behaviour => "replace"
+        }
     }
 }
 
