--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -68,7 +68,7 @@ filter{
         }
 
         grok {
-            match => { "message" => "\%{WORD:ldapType} %{GREEDYDATA}" }
+            match => { "message" => "\A%{WORD:ldapType} %{GREEDYDATA}" }
         }
 
         mutate{
