added a searcher to generate directory traffic

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,12 @@ services:
       - pingnet
 
 
+  searchrate:
+    image: pingidentity/ldap-sdk-tools
+    command: wait-for pingdirectory:389 -- searchrate -h pingdirectory -p 389 -D cn=administrator -w 2FederateM0re -b dc=example,dc=com "(uid=user.[0-4])" -r 5
+    networks:
+      - pingnet
+
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:$ELASTIC_VERSION
     container_name: es01
