--- a/elasticsearch-siem/enrichment_cache/TorNodes.yml
+++ b/elasticsearch-siem/enrichment_cache/TorNodes.yml
@@ -232,6 +232,7 @@
 "199.249.230.80": "YES"
 "97.74.237.196": "YES"
 "200.98.137.240": "YES"
+"93.234.92.245": "YES"
 "138.59.17.40": "YES"
 "5.135.115.34": "YES"
 "185.220.101.51": "YES"
@@ -400,6 +401,7 @@
 "209.141.62.246": "YES"
 "104.244.78.233": "YES"
 "152.66.35.72": "YES"
+"173.208.195.102": "YES"
 "37.200.98.117": "YES"
 "35.0.127.52": "YES"
 "192.34.80.176": "YES"
@@ -524,6 +526,7 @@
 "38.68.37.77": "YES"
 "139.59.213.101": "YES"
 "188.214.128.181": "YES"
+"62.171.144.155": "YES"
 "94.237.76.207": "YES"
 "109.70.100.30": "YES"
 "199.249.230.68": "YES"
@@ -1112,6 +1115,7 @@
 "49.50.66.209": "YES"
 "51.15.80.14": "YES"
 "51.79.53.145": "YES"
+"5.79.109.48": "YES"
 "202.165.228.225": "YES"
 "198.98.62.107": "YES"
 "185.220.101.45": "YES"
