--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -95,6 +95,10 @@ filter{
             dictionary_path => '/etc/logstash/enrichment/TorNodes.yml'
             refresh_behaviour => "replace"
         }
+
+        mutate {
+            remove_field => "[message]"
+        }
     }
 }
 
