--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -96,6 +96,14 @@ filter{
             refresh_behaviour => "replace"
         }
 
+        translate {
+            field => "resultCode"
+            destination => "resultCodeText"
+            fallback => "No Reason Found."
+            dictionary_path => '/etc/logstash/enrichment/PD_Reasons.yml'
+            refresh_behaviour => "replace"
+        }
+
         mutate {
             remove_field => "[message]"
         }
