update to compose for load generators

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,12 +46,21 @@ services:
       - pingnet
 
 
-  searchrate:
+#TEST AUTHENTICATORS
+  authrate_ok:
     image: pingidentity/ldap-sdk-tools
-    command: wait-for pingdirectory:389 -t 900 -- searchrate -h pingdirectory -p 389 -D cn=administrator -w 2FederateM0re -b dc=example,dc=com -f "(uid=user.[0-4])" -r 5
+    command: wait-for pingdirectory:389 -t 900 -- authrate -h pingdirectory -p 389 -D cn=administrator -w 2FederateM0re -b dc=example,dc=com -f "(uid=user.[0-4])" -C 2FederateM0re -r 10
     networks:
       - pingnet
-      
+
+
+  authrate_ko:
+    image: pingidentity/ldap-sdk-tools
+    command: wait-for pingdirectory:389 -t 900 -- authrate -h pingdirectory -p 389 -D cn=administrator -w 2FederateM0re -b dc=example,dc=com -f "(uid=user.[0-4])" -C badPassword -r 10
+    networks:
+      - pingnet
+#END TEST AUTHENTICATORS
+
 
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:$ELASTIC_VERSION
