--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -17,6 +17,12 @@ input {
         type => syslog
         add_field => {"log_type" => "PD_Access_Log"}
     }
+    syslog {
+        id => "system_in"
+        port => 20517
+        type => syslog
+        add_field => {"log_type" => "PF_System_Log"}
+    }
 }
 
 filter{
@@ -136,4 +142,15 @@ output{
             password => "${ELASTIC_PASSWORD}"
         }
     }
+    if([log_type] == "PF_System_Log"){
+        elasticsearch {
+            id => "pf_system_out"
+            ssl => true
+            ssl_certificate_verification => false
+            hosts => ["https://es01:9200","https://es02:9200"]
+            index => "pf-system-logs-%{+YYYY.MM.dd}"
+            user => "elastic"
+            password => "${ELASTIC_PASSWORD}"
+        }
+    } 
 }
