--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -67,7 +67,6 @@ filter{
     }
 
     if([log_type] == "PD_Access_Log"){
-
         kv {
             source => "[message]"
             value_split => "="
@@ -106,6 +105,11 @@ filter{
             remove_field => "[message]"
         }
     }
+    if([log_type] == "PF_System_Log"){
+        kv {
+            source => "[message]"
+            value_split => "="
+        }
 }
 
 output{
