fix broken pipeline

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -110,6 +110,11 @@ filter{
             source => "[message]"
             value_split => "="
         }
+
+        mutate {
+            remove_field => "[message]"
+        }
+    }
 }
 
 output{
