making changes to pipeline and log4j for audit

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -28,14 +28,9 @@ input {
 filter{
     #Log4J Pattern
     if([log_type] == "PF_Audit_Log"){
-        csv{
-            columns => ["long_log_timestamp","event_time","company_name","product_name","trackingid","event_name","subject","ip","app","connectionid","protocol","host_name","role","status","adapterid","description","responsetime","initiator"]
-            separator => "| "
-        }
-        mutate {
-            remove_field => "[tags]"
-            remove_field => "[message]"
-            remove_field => "[long_log_timestamp]"
+        kv {
+            source => "[message]"
+            value_split => "="
         }
         geoip {
             source => "ip"
