still working through some issues

--- a/elasticsearch-siem/enrichment_cache/TorNodes.yml
+++ b/elasticsearch-siem/enrichment_cache/TorNodes.yml
@@ -516,6 +516,7 @@
 "51.15.117.50": "YES"
 "93.115.86.9": "YES"
 "62.210.37.82": "YES"
+"205.185.121.212": "YES"
 "23.129.64.151": "YES"
 "37.139.8.104": "YES"
 "89.34.27.43": "YES"
