--- a/elasticsearch-siem/enrichment_cache/TorNodes.yml
+++ b/elasticsearch-siem/enrichment_cache/TorNodes.yml
@@ -818,6 +818,7 @@
 "195.123.212.75": "YES"
 "205.185.124.24": "YES"
 "1.65.179.17": "YES"
+"176.105.255.206": "YES"
 "192.42.116.18": "YES"
 "209.141.40.167": "YES"
 "167.114.92.55": "YES"
