--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -1,27 +1,33 @@
 input {
     syslog {
-        id => "audit_in"
+        id => "pf_audit_in"
         port => 20514
         type => syslog
         add_field => {"log_type" => "PF_Audit_Log"}
     }
     syslog {
-        id => "provisioner_in"
+        id => "pf_provisioner_in"
         port => 20515
         type => syslog
         add_field => {"log_type" => "PF_Provisioner_Log"}
     }
     syslog {
-        id => "directory_in"
+        id => "pd_directory_in"
         port => 20516
         type => syslog
         add_field => {"log_type" => "PD_Access_Log"}
     }
     syslog {
-        id => "system_in"
+        id => "pf_system_in"
         port => 20517
         type => syslog
         add_field => {"log_type" => "PF_System_Log"}
+    }
+    syslog {
+        id => "pa_audit_in"
+        port => 20518
+        type => syslog
+        add_field => {"log_type" => "PA_Audit_Log"}
     }
 }
 
@@ -107,6 +113,14 @@ filter{
         }
 
     }
+
+    if([log_type] == "PA_Audit_Log"){
+        kv {
+            source => "[message]"
+            value_split => "="
+        }
+
+    }
 }
 
 output{
@@ -153,5 +167,16 @@ output{
             user => "elastic"
             password => "${ELASTIC_PASSWORD}"
         }
-    } 
+    }
+    if([log_type] == "PA_Audit_Log"){
+        elasticsearch {
+            id => "pa_audit_out"
+            ssl => true
+            ssl_certificate_verification => false
+            hosts => ["https://es01:9200","https://es02:9200"]
+            index => "pa-audit-logs-%{+YYYY.MM.dd}"
+            user => "elastic"
+            password => "${ELASTIC_PASSWORD}"
+        }
+    }  
 }
