ping access log4j modifications

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,7 +34,8 @@ services:
       - PING_IDENTITY_DEVOPS_USER=$PING_IDENTITY_DEVOPS_USER
       - PING_IDENTITY_DEVOPS_KEY=$PING_IDENTITY_DEVOPS_KEY
       - SYSLOG_HOST=logstash 
-      - SYSLOG_PORT=20518
+      - SYSLOG_PORT_SYSTEM=20518
+      - SYSLOG_PORT_AUDIT=20518
     ports:
       - 9000:9000
       - 3000:3000
