--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -24,8 +24,14 @@ input {
         add_field => {"log_type" => "PF_System_Log"}
     }
     syslog {
-        id => "pa_audit_in"
+        id => "pa_system_in"
         port => 20518
+        type => syslog
+        add_field => {"log_type" => "PA_System_Log"}
+    }
+    syslog {
+        id => "pa_audit_in"
+        port => 20519
         type => syslog
         add_field => {"log_type" => "PA_Audit_Log"}
     }
@@ -119,7 +125,12 @@ filter{
             source => "[message]"
             value_split => "="
         }
-
+    }
+    if([log_type] == "PA_System_Log"){
+        kv {
+            source => "[message]"
+            value_split => "="
+        }
     }
 }
 
@@ -168,13 +179,13 @@ output{
             password => "${ELASTIC_PASSWORD}"
         }
     }
-    if([log_type] == "PA_Audit_Log"){
+    if([log_type] == "PA_System_Log"){
         elasticsearch {
-            id => "pa_audit_out"
+            id => "pa_system_out"
             ssl => true
             ssl_certificate_verification => false
             hosts => ["https://es01:9200","https://es02:9200"]
-            index => "pa-audit-logs-%{+YYYY.MM.dd}"
+            index => "pa-system-logs-%{+YYYY.MM.dd}"
             user => "elastic"
             password => "${ELASTIC_PASSWORD}"
         }
