--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -5,30 +5,35 @@ input {
         type => syslog
         add_field => {"log_type" => "PF_Audit_Log"}
     }
+
     syslog {
         id => "pf_provisioner_in"
         port => 20515
         type => syslog
         add_field => {"log_type" => "PF_Provisioner_Log"}
     }
+
     syslog {
         id => "pd_directory_in"
         port => 20516
         type => syslog
         add_field => {"log_type" => "PD_Access_Log"}
     }
+
     syslog {
         id => "pf_system_in"
         port => 20517
         type => syslog
         add_field => {"log_type" => "PF_System_Log"}
     }
+
     syslog {
         id => "pa_system_in"
         port => 20518
         type => syslog
         add_field => {"log_type" => "PA_System_Log"}
     }
+
     syslog {
         id => "pa_audit_in"
         port => 20519
@@ -112,6 +117,7 @@ filter{
             remove_field => "[message]"
         }
     }
+
     if([log_type] == "PF_System_Log"){
         kv {
             source => "[message]"
@@ -125,7 +131,24 @@ filter{
             source => "[message]"
             value_split => "="
         }
+
+        translate {
+            field => "client"
+            destination => "threat_intel"
+            fallback => "No"
+            dictionary_path => '/etc/logstash/enrichment/AlienVaultIP.yml'
+            refresh_behaviour => "replace"
+        }
+
+        translate {
+            field => "client"
+            destination => "tor_intel"
+            fallback => "No"
+            dictionary_path => '/etc/logstash/enrichment/TorNodes.yml'
+            refresh_behaviour => "replace"
+        }
     }
+
     if([log_type] == "PA_System_Log"){
         kv {
             source => "[message]"
@@ -186,6 +209,17 @@ output{
             ssl_certificate_verification => false
             hosts => ["https://es01:9200","https://es02:9200"]
             index => "pa-system-logs-%{+YYYY.MM.dd}"
+            user => "elastic"
+            password => "${ELASTIC_PASSWORD}"
+        }
+    } 
+    if([log_type] == "PA_Audit_Log"){
+        elasticsearch {
+            id => "pa_audit_out"
+            ssl => true
+            ssl_certificate_verification => false
+            hosts => ["https://es01:9200","https://es02:9200"]
+            index => "pa-audit-logs-%{+YYYY.MM.dd}"
             user => "elastic"
             password => "${ELASTIC_PASSWORD}"
         }
