--- a/elasticsearch-siem/enrichment_cache/TorNodes.yml
+++ b/elasticsearch-siem/enrichment_cache/TorNodes.yml
@@ -55,6 +55,7 @@
 "54.37.16.241": "YES"
 "64.71.142.240": "YES"
 "142.44.156.159": "YES"
+"45.125.65.118": "YES"
 "128.199.149.82": "YES"
 "95.216.191.15": "YES"
 "199.19.226.92": "YES"
@@ -800,6 +801,7 @@
 "128.31.0.13": "YES"
 "138.59.18.110": "YES"
 "31.13.195.130": "YES"
+"51.15.217.175": "YES"
 "144.217.80.80": "YES"
 "185.107.47.171": "YES"
 "205.185.126.56": "YES"
@@ -939,6 +941,7 @@
 "31.185.104.21": "YES"
 "185.175.208.180": "YES"
 "212.199.61.5": "YES"
+"45.119.203.171": "YES"
 "158.69.35.227": "YES"
 "209.141.51.65": "YES"
 "167.114.89.206": "YES"
