--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -97,6 +97,10 @@ filter{
             ]
         }
 
+        geoip {
+            source => "requesterIP"
+        }
+
         translate {
             field => "requesterIP"
             destination => "threat_intel"
@@ -130,6 +134,10 @@ filter{
         kv {
             source => "[message]"
             value_split => "="
+        }
+
+        geoip {
+            source => "client"
         }
 
         translate {
